<resources>
    <string name="app_name">Test</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">My Dope Counter</string>
    <string name="second_fragment_label">Create your Hero</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="plus">+</string>
    <string name="less">-</string>
    <string name="counter">Compteur</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="rpg">RPG</string>
    <string name="create_hero">Create my Hero</string>
    <string name="hero_name">Hero name</string>
    <string name="race_label">Choose race</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="battle_hero">Battle Hero</string>
    <string name="hero_stats">Stats Hero</string>
    <string name="startFight">Start Fight</string>
    <string name="best_records">Best Records</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>