<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.test.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.test.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_HeroBattleFragment"
            app:destination="@id/HeroBattleFragment" />
    </fragment>

    <fragment
        android:id="@+id/HeroBattleFragment"
        android:name="com.example.test.HeroBattleFragment"
        android:label="@string/battle_hero"
        tools:layout="@layout/fragment_hero_battle">
        <action
            android:id="@+id/action_HeroBattleFragment_to_StatsHeroFragment"
            app:destination="@id/statsHeroFragment" />
        <action
            android:id="@+id/action_HeroBattleFragment_to_BestRecordsFragment"
            app:destination="@id/bestRecordsFragment" />
    </fragment>

    <fragment
        android:id="@+id/statsHeroFragment"
        android:name="com.example.test.StatsHeroFragment"
        android:label="@string/hero_stats"
        tools:layout="@layout/fragment_stats_hero" />

    <fragment
        android:id="@+id/bestRecordsFragment"
        android:name="com.example.test.BestRecordsFragment"
        android:label="@string/best_records"
        tools:layout="@layout/fragment_best_records" />
</navigation>